@@ -21,6 +21,7 @@ tempTrender::tempTrender(string filePath) {
 	}
 }
 
+// To set and plot the histogram for hottest and coldest date in Uppsala.
 void tempTrender::hotCold_Upp() {
 	int location_specified = 1;
 	int mode = 1;
@@ -28,6 +29,7 @@ void tempTrender::hotCold_Upp() {
 	peak_temp_Upp(inFile, start_year, mode, location_specified);
 }
 
+// To set and plot the histogram for hottest and coldest date other than Uppsala.
 void tempTrender::hotCold(){
 	int location_specified = 1;
 	int mode = 1;
